<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Contact List</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_contact_detail">ContactDetail</string>

    <!-- Contact Details Placeholders -->
    <string name="title_name">Name</string>
    <string name="title_company">Company</string>
    <string name="title_phone">Phone</string>
    <string name="title_address">Address</string>
    <string name="title_birthday">Birthday</string>
    <string name="title_email">Email</string>
</resources>
