<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.solstice.contactlist.ContactDetail">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/contactLargePhoto"
                android:src="@drawable/ic_launcher"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:minHeight="100dp"
                android:minWidth="100dp"
                android:maxHeight="100dp"
                android:maxWidth="100dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/title_name"
                android:id="@+id/titleName"
                android:layout_alignTop="@+id/contactLargePhoto"
                android:layout_toRightOf="@+id/contactLargePhoto"
                android:layout_toEndOf="@+id/contactLargePhoto" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Contact Name"
                android:id="@+id/contactName"
                android:layout_toRightOf="@+id/contactLargePhoto"
                android:layout_toEndOf="@+id/contactLargePhoto"
                android:layout_below="@+id/titleName"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Company Name"
                android:id="@+id/contactCompanyName"
                android:layout_alignBottom="@+id/contactLargePhoto"
                android:layout_toRightOf="@+id/contactLargePhoto"
                android:layout_toEndOf="@+id/contactLargePhoto"
                android:layout_alignRight="@+id/contactPhoneType"
                android:layout_alignEnd="@+id/contactPhoneType" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/title_phone"
                android:id="@+id/titlePhone"
                android:layout_below="@+id/contactLargePhoto"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="26dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="XXX-XXX-XXX"
                android:id="@+id/contactPhone"
                android:layout_below="@+id/titlePhone"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@+id/contactPhoneType"
                android:layout_toStartOf="@+id/contactPhoneType" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Type"
                android:id="@+id/contactPhoneType"
                android:layout_alignBottom="@+id/contactPhone"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_toRightOf="@+id/contactName"
                android:layout_toEndOf="@+id/contactName" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/title_address"
                android:id="@+id/titleAddress"
                android:layout_below="@+id/contactPhone"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="26dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Sample Address"
                android:id="@+id/contactAddress"
                android:layout_below="@+id/titleAddress"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/contactPhoneType"
                android:layout_alignEnd="@+id/contactPhoneType" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="City"
                android:id="@+id/contactCity"
                android:layout_below="@+id/contactAddress"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/contactAddress"
                android:layout_alignEnd="@+id/contactAddress" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/title_birthday"
                android:id="@+id/titleBirthday"
                android:layout_below="@+id/contactCity"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="27dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Sample Date"
                android:id="@+id/contactBirthDate"
                android:layout_below="@+id/titleBirthday"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/contactEmail"
                android:layout_alignEnd="@+id/contactEmail" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/title_email"
                android:id="@+id/titleEmail"
                android:layout_below="@+id/contactBirthDate"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="34dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Sample Email"
                android:id="@+id/contactEmail"
                android:layout_below="@+id/titleEmail"
                android:layout_alignRight="@+id/contactPhoneType"
                android:layout_alignEnd="@+id/contactPhoneType"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/title_company"
                android:id="@+id/titleCompany"
                android:layout_toEndOf="@+id/contactLargePhoto"
                android:layout_above="@+id/contactCompanyName"
                android:layout_toRightOf="@+id/contactLargePhoto" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/contactFavorite"
                android:src="@drawable/star"
                android:longClickable="false"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:scaleType="fitEnd"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/contactPhoneType"
                android:layout_toStartOf="@+id/contactPhoneType"
                android:layout_alignBottom="@+id/contactName" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
